# brunchcompare

./: .eslintrc.json  .eslintrc.yml  .gitignore  LICENSE  README.md  main.cpp  package-lock.json  package.json  pyproject.toml  resources.qrc  runem.sh  tsconfig.json
.desktop/: desktop.js  settings.json
.meteor/: .id  packages  versions
app/: chart.ts  index.html  main.ts  router.js
app/components/: chart.js  games-chart.js  geekbench-chart.js
app/templates/: application.hbs  games.hbs  geekbench.hbs
app/templates/components/: geekbench-chart.hbs
app_old/: index.html
brunchmark/: brunchmark.py  brunchmark.qml
client/: chart.js  main.css  main.html  main.js  photon.css
config/: environment.js
containers/botan/: Dockerfile
containers/helsing/: Dockerfile
containers/primesieve/: Dockerfile
ember-electron/: electron-forge-config.js  main.js
imports/conf/: scores.yml
imports/ui/: body.coffee  body.html  body.js
qml/qmlchart/: MainForm.ui.qml  View6.qml
terraform/vultr/: .terraform.lock.hcl  plans.json  providers.tf  user-data.sh  vultr_instances.tf
test/: helper.js
tests/: index.html  main.js
tests/acceptance/: geekbench-test.js
tests/integration/components/: games-chart-test.js  geekbench-chart-test.js
tests/unit/routes/: geekbench-test.js
