[tool.poetry]
name = "brunchmark"
version = "0.1.0"
description = ""
authors = ["egee-irl <brian@egee.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
PySide2 = "~5.14"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[tool.poetry.scripts]
brunchmark = "brunchmark.brunchmark:brunchmark"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

